# StoryReader

./: .gitignore  Procfile  StoryReader.cabal  errlog  tmp
Stories/: Democracia sin rozamiento.txt  ETER  El papel del Rey.txt  Index-a  KAFKA and HORACIO  RETENITY.txt  Stories
Stories.bak/: 22222222222  4444  6666666  KAFKA and HORACIO  RETENITY.txt  Stories  pepe y juan  prueba
TCacheData/: UCadmin  UCanon#
TCacheData/Workflow/: Running
TCacheData/Workflow/Stat/noscript/: admin
files/transition/: fasw.transitions.js
src/: StoryReader (3).hs  StoryReader - copia (2).hs  StoryReader - copia.hs  StoryReader.hs  StoryReader.old.hs  exampQCheck.hs
src/Util/: Mail.hs
src/old/: StoryReader_stub.h
test/: Parpendicular Universes.htm
