name: StoryReader
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
package-url: https://github.com/agocorona/StoryReader
synopsis: Story reader for parpendicular universes
description:
category: Web application
data-dir: ""

executable StoryReader
    build-depends: MFlow -any, QuickCheck -any, RefSerialize -any,
                   TCache -any, Workflow -any, base -any, bytestring -any,
                   containers -any, directory -any, html -any, mtl -any,
                   utf8-string -any, SMTPClient -any, old-time -any,
                   network -any, vector -any, text -any, parsec -any,
                   old-time -any
    main-is: StoryReader.hs
    buildable: True
    hs-source-dirs: src

