name: StoryReader
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
extra-source-files: ""

executable StoryReader
    build-depends: text -any, vector -any, directory -any, parsec -any,
                   TCache -any, base -any, old-time -any, containers -any,
                   network -any, smtp-mail -any, mime-mail -any, bytestring -any, mtl -any,
                   utf8-string -any, MFlow -any, blaze-html -any
    main-is: StoryReader.hs
    buildable: True
    hs-source-dirs: src
    other-modules:

test-suite test-StoryReader
    build-depends: base -any
    type: exitcode-stdio-1.0
    main-is: StoryReader.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
